and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 14th, 2015 M.Asai (run-V10-00-30)
- G4MTRunManager : Make sure G4RunManager::TerminateEventLoop() is
  invoked at the end of run.

October 1st, 2015 M.Asai (run-V10-00-29)
- Introduing the mechanism of G4Event not to be deleted until it is
  visualized by the other thread.

August 26th, 2014 M.Asai (run-V10-00-28)
- All the G4ParallelWorldProcess objects of all threads update their
  corresponding world volumes when the entire geometry has been
  destroyed and rebuilt from scratch. Addressing further to bug 
  report #1665. Co-working with procscore-V10-00-00.

August 25th, 2014 M.Asai (run-V10-00-27)
- G4VScoringMesh is cleaned when geometry is rebuilt from
  scratch. Addressing further to bug report #1665. Co-working with
  digits_hits-V10-00-08.

August 22nd, 2014 M.Asai (run-V10-00-26)
- G4TransportationManager is cleaned when geometry is rebuilt from
  scratch. Addressing further to bug report #1665. Co-working with
  geomnav-V10-00-08.

August 21st, 2014 M.Asai (run-V10-00-25)
- Clean up previous tag. Addressing to bug report #1665.

August 21st, 2014 M.Asai (run-V10-00-24)
- Clear root logical volume pointers in G4Region when geometry is
  rebuilt from scratch.

August 19th, 2014 M.Asai (run-V10-00-23)
- Preloading ions is now optional once again.

August 19th, 2014 M.Asai (run-V10-00-22)
- Force preload to see all the mechanisms work in previous tag.
  Co-working with particles-V10-00-20 tag.

August 18th, 2014 M.Asai (run-V10-00-21)
- Preloading ions is now optional. Issues in previous tags
  run-V10-00-18 and run-V10-00-19 are fixed.
  Co-working with particles-V10-00-19 tag.
